# supabridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml.example
.sqlx/: query-399030bd86e8dcd1c7c10a612e1d4cb1656e59e65164e492c0055df610148906.json  query-4ba851b4aa641b4fd7d2d8fb7c65a804b944a85d34694041f0352faab8ab347a.json
migrations/: 20240321203914_init.down.sql  20240321203914_init.up.sql  20240403063915_add_twitch.down.sql  20240403063915_add_twitch.up.sql
src/: builder.rs  config.rs  main.rs  router.rs
