[package]
name = "supabridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["tracing", "macros"] }
futures = "0.3.30"
reqwest = { version = "0.12.3", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
regex = "1.10"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "migrate"] }
tower-http = { version = "0.5.2", features = ["limit", "trace"] }
http-body-util = "0.1.1"

# Twitch dependencies
twitch_api = { git = "https://github.com/twitch-rs/twitch_api", features = [
    "client",
    "helix",
    "reqwest",
    "eventsub",
    "hmac",
    "tracing",
    "twitch_oauth2",
] }
twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_api", features = [
    "reqwest",
] }
# tmi = "0.5.0"

# Factorio dependencies
notify = "6.1.1"
rcon = { version = "0.6.0", features = ["rt-tokio"] }

# https://github.com/twitch-rs/twitch_api/issues/256
[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"

[profile.release]
strip = true
